# CsvLoader

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build.yml
src/: CsvLoader.cpp  CsvLoader.h  CsvLoader.json  InputDialog.cpp  InputDialog.h
